k8s/App1.yaml
apiVersion: v1
kind: Service
metadata:
 name: ty-test-flask
spec:
 selector:
   app: ty-test-flask
 ports:
   - port: 80
     targetPort: 31327
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: ty-test-flask
spec:
 replicas: 1
 selector:
   matchLabels:
     app: ty-test-flask
 template:
   metadata:
     labels:
       app: ty-test-flask
   spec:
     containers:
     - name: ty-test-flask
       image: public.ecr.aws/sctp-sandbox/ty-flask-app:latest
       ports:
       - containerPort: 31327
