k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
 name: ty-test-ingress
 namespace: default
spec:
 gatewayClassName: cilium
 listeners:
 - name: http
   protocol: HTTP
   port: 80
