k8s/ingress-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ty-path-based-ingress
  namespace: default
  labels:
    app: routing-types
    type: path-based
  annotations:
       nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: ce7-ty.sctp-sandbox.com
    http:
      paths:
      - path: /grafana # < play with this
        pathType: Prefix
        backend:
          service:
            name: ty-prome-grafana
            port:
              number: 80
      - path: /prometheus # < play with this
        pathType: Prefix
        backend:
          service:
            name: ty-prome-kube-prometheus-s-prometheus
            port:
              number: 9090
