k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: <INGRESS_NAME>
 namespace: default
spec:
 ingressClassName: nginx
 rules:
 - host: <FQDN>
   http:
     paths:
     - path: / # < play with this
       pathType: Prefix
       backend:
         service:
           name: <GRAF_NAME>
           port:
             number: <GRAF_PORT>
